test/corpus/try.test
==========
Try catch
==========
try {
  print("hello")
} catch (ex) {
  print("fail")
}
---

(program
  (try_statement
    body: (block
      (expression_statement
        (method_invocation
          name: (identifier)
          arguments: (argument_list
            (string_literal
              (string_fragment))))))
    (catch_clause
      (catch_formal_parameter
        name: (identifier))
      body: (block
        (expression_statement
          (method_invocation
            name: (identifier)
            arguments: (argument_list
              (string_literal
                (string_fragment)))))))))

==========
Try catch finally
==========
try {
  print("hello")
} catch (ex) {
  print("fail")
} finally {
  print("finally")
}
---

(program
  (try_statement
    body: (block
      (expression_statement
        (method_invocation
          name: (identifier)
          arguments: (argument_list
            (string_literal
              (string_fragment))))))
    (catch_clause
      (catch_formal_parameter
        name: (identifier))
      body: (block
        (expression_statement
          (method_invocation
            name: (identifier)
            arguments: (argument_list
              (string_literal
                (string_fragment)))))))
    (finally_clause
      (block
        (expression_statement
          (method_invocation
            name: (identifier)
            arguments: (argument_list
              (string_literal
                (string_fragment)))))))))
